# olus-rust

./: .editorconfig  .gitignore  Cargo.toml  README.md  TODO.md  example.olus  rustfmt.toml  simple-closure.olus  simple-hol.olus  simple-larger.olus  simple-loops.olus  simple.olus
.cargo/: config
book/: book.toml  init.js
book/src/: SUMMARY.md  assembler.md  chapter_1.md  orthodoxy.md  real.md  serial.md
codegen/: Cargo.toml
codegen/src/: allocator.rs  code.rs  intrinsics.rs  lib.rs  machine_state.rs  macho.rs  main.rs  memory.rs  offset_assembler.rs  rom.rs  utils.rs
codegen/src/machine/: assembler.rs  machine_state.rs  mod.rs  optimizer.rs  state.rs  transition.rs  value.rs
olus/: Cargo.toml
olus/src/: interpreter.rs  main.rs
parser/: Cargo.toml  Readme.md
parser/src/: AST.rs  Mir.rs  desugar.rs  lexer.rs  lib.rs  parse.rs  parser.rs  tokens.rs
