[package]
name = "parser"
version = "0.1.0"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"

[dependencies]
log = "0.4.6"
unic = "0.9.0"
unic-ucd-ident = { version = "0.9.0", features = ["pattern"] }
caseless = "0.2.1"
nom = "4.2.2"
serde = { version = "1.0.90", features = ["derive"] }
bincode = "1.1.3"

[dev-dependencies]
pretty_assertions = "0.6.1"
