[package]
name = "parser"
description = "The Oluś programming language."
version = "0.1.0"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/Recmo/olus-rust"
keywords = ["language", "compiler", "olus"]
categories = ["parser"]
license = "MIT"

[dependencies]
tracing = "0.1.25"
thiserror = "1.0"
logos = "0.12"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
serde = { version = "1.0.104", features = ["derive"] }
bincode = "1.2.1"
bitvec = "0.17.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
indoc = "1.0.3"
